--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/imagemap/Makefile.am (imagemap_SOURCES): removed pix-data.h.
+
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_area):
 	take drawable offsets into account when masking the preview with
 	the selection mask.
