2004-10-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	oops, didn't meant to remove that line.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14973 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
+	oops, didn't meant to remove that line.
+
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/imagemap/Makefile.am (imagemap_SOURCES): removed pix-data.h.
 
 2004-10-04  Sven Neumann  <sven@gimp.org>
