2004-10-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-interface.c (script_fu_reset):
	fixed reset for SF_TEXT values.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14974 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-interface.c (script_fu_reset):
+	fixed reset for SF_TEXT values.
+
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
 	oops, didn't meant to remove that line.
 
