2004-10-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/helpbrowser/dialog.c: added a close button. Launch the
	browser with the HTML focused.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14978 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/helpbrowser/dialog.c: added a close button. Launch the
+	browser with the HTML focused.
+
+2004-10-05  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpwidgets.c (gimp_table_attach_aligned):
 	left-justify the label.
 
