--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-05  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated.
+
 2004-09-30  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt: moved stuff to right section.
