--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/addborder.scm: simple change to make
+	the script work on all image types, not only RGB.
+
+2004-10-05  Sven Neumann  <sven@gimp.org>
+
 	* Made 2.1.6 release.
 
 2004-10-05  Sven Neumann  <sven@gimp.org>
