--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/spheredesigner.c: improved the dialog a bit,
+	needs more work.
+
 2004-10-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/scripts/addborder.scm: simple change to make
