2004-10-06  Sven Neumann  <sven@gimp.org>
	* app/core/gimpimage.[ch]: store the time when the image is first
	dirtied.

	* app/display/gimpdisplayshell-close.c: tell the user what time
	period of changes will be lost when the image is not saved.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14986 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimage.[ch]: store the time when the image is first
+	dirtied.
+
+	* app/display/gimpdisplayshell-close.c: tell the user what time
+	period of changes will be lost when the image is not saved.
+
 2004-10-06  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/brushes.pdb (brushes_get_brush_data)
