2004-10-06  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/lib.pl: put subsequent deprecated prototypes into
	a single #ifndef ... #endif pair.

	* libgimp/gimpbrushes_pdb.h
	* libgimp/gimpgradients_pdb.h
	* libgimp/gimppalettes_pdb.h
	* libgimp/gimppatterns_pdb.h
	* libgimp/gimptexttool_pdb.h: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14987 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
+	* tools/pdbgen/lib.pl: put subsequent deprecated prototypes into
+	a single #ifndef ... #endif pair.
+
+	* libgimp/gimpbrushes_pdb.h
+	* libgimp/gimpgradients_pdb.h
+	* libgimp/gimppalettes_pdb.h
+	* libgimp/gimppatterns_pdb.h
+	* libgimp/gimptexttool_pdb.h: regenerated.
+
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage.[ch]: store the time when the image is first
 	dirtied.
 
