2004-10-06  Sven Neumann  <sven@gimp.org>
        * configure.in: bumped version number to 2.1.7.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14988 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: bumped version number to 2.1.7.
+
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
 	* tools/pdbgen/lib.pl: put subsequent deprecated prototypes into
 	a single #ifndef ... #endif pair.
 
