2004-10-05  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/lib.pl: Fix array return value generation when there
        are more args after it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14989 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-05  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/lib.pl: Fix array return value generation when there
+	are more args after it.
+
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 2.1.7.
