2004-10-06  Sven Neumann  <sven@gimp.org>
	* libgimpmodule/libgimpmodule-sections.txt
	* libgimpmodule/tmpl/gimpmodule.sgml: added missing macro
	GIMP_MODULE_PARAM_SERIALIZE.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14990 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
+	* libgimpmodule/libgimpmodule-sections.txt
+	* libgimpmodule/tmpl/gimpmodule.sgml: added missing macro
+	GIMP_MODULE_PARAM_SERIALIZE.
+
 2004-10-05  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
