2004-10-06  Sven Neumann  <sven@gimp.org>
	* libgimp/gimp.def: updated.

2004-10-06  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpbrush.sgml
	* libgimp/tmpl/gimpgradient.sgml
	* libgimp/tmpl/gimppattern.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14992 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def: updated.
+
 2004-10-06  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/brush.pdb: return the mask's bpp and the
