2004-10-06  Michael Natterer  <mitch@gimp.org>
	* app/actions/file-commands.c (file_revert_confirm_callback):
	removed the code which sets the new image on all contexts where
	the old image was set...

	* app/display/gimpdisplay-foreach.c (gimp_displays_reconnect):
	...and added it here so it happens for all calls of this function,
	also from the PDB. Fixes bug #154638.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14993 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-10-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/file-commands.c (file_revert_confirm_callback):
+	removed the code which sets the new image on all contexts where
+	the old image was set...
+
+	* app/display/gimpdisplay-foreach.c (gimp_displays_reconnect):
+	...and added it here so it happens for all calls of this function,
+	also from the PDB. Fixes bug #154638.
+
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimp.def: updated.
