2004-10-06  Sven Neumann  <sven@gimp.org>
	* app/actions/plug-in-actions.c (plug_in_actions_update): an image
	doesn't necessarily have a drawable. Handle the case when it doesn't.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14996 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/plug-in-actions.c (plug_in_actions_update): an image
+	doesn't necessarily have a drawable. Handle the case when it doesn't.
+
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
 	* app/app_procs.[ch]
 	* app/batch.[ch]
 	* app/main.c: added new command-line option "--batch-interpreter"
