--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/postscript.c (ps_open): tweaed error message.
+
 2004-10-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/pdb/procedural_db.h (struct ProcRecord): changed new member
