2004-10-06  Michael Natterer  <mitch@gimp.org>
	* libgimp/tmpl/gimpgradient.sgml: s/gimpgradientedit/gimpgradient/


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15006 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-06  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/tmpl/gimpgradient.sgml: s/gimpgradientedit/gimpgradient/
+
 2004-10-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt
