2004-10-05  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/lib.pl: Slight cleanup of doc generating code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15007 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-05  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/lib.pl: Slight cleanup of doc generating code.
+
 2004-10-06  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/lib.pl: for deprecated procedures, create a gtk-doc
