2004-10-07  Simon Budig  <simon@gimp.org>
	* app/actions/view-commands.c: fill in the formula...  :-)
	untabbified.

	* app/display/gimpdisplayshell-scale.c: Micro-Cleanup, untabbified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15018 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-07  Simon Budig  <simon@gimp.org>
+
+	* app/actions/view-commands.c: fill in the formula...  :-)
+	untabbified.
+
+	* app/display/gimpdisplayshell-scale.c: Micro-Cleanup, untabbified.
+
 2004-10-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/view-actions.c: changed zoom actions to be
