--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-10-07  Michael Natterer  <mitch@gimp.org>
+
+	Merged the gz and bz2 plug-ins into one generic compression
+	handler that can be extended by adding entries to a table of
+	compressor definitions:
+
+	* configure.in: removed bz2 special casing for win32.
+
+	* plug-ins/common/bz2.c
+	* plug-ins/common/gz.c: removed.
+
+	* plug-ins/common/compressor.c: new plug-in.
+
+	* plug-ins/common/plugin-defs.pl: changed accordingly.
+
+	* plug-ins/common/.cvsignore
+	* plug-ins/common/Makefile.am: regenerated.
+
 2004-10-07  Simon Budig  <simon@gimp.org>
 
 	* app/actions/view-commands.c: fill in the formula...  :-)
