2004-10-07  Kevin Cozens  <kcozens@cvs.gimp.org>
    * plug-ins/script-fu/scripts/selection-round.scm: Changed deprecated
    constant ADD to CHANNEL-OP-ADD.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15022 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-07  Kevin Cozens  <kcozens@cvs.gimp.org>
+
+	* plug-ins/script-fu/scripts/selection-round.scm: Changed deprecated
+	constant ADD to CHANNEL-OP-ADD.
+
 2004-10-07  Michael Natterer  <mitch@gimp.org>
 
 	Merged the gz and bz2 plug-ins into one generic compression
