--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-10-08  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell.c (gimp_display_shell_real_scaled)
+	(gimp_display_shell_flush)
+	* app/gui/gui-vtable.c (gui_display_create): always pass a
+	GimpDisplay, not a GimpDisplayShell as "data" to
+	gimp_ui_manager_update().
+
+	* app/actions/actions.c (action_data_get_*): removed checks if the
+	passed data is a GimpDisplayShell and temporarily added g_assert()
+	to be sure. The assertions will be removed before 2.2.
+
 2004-10-07  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.c: added some (disabled) debug output.
