--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-08  Sven Neumann  <sven@gimp.org>
+
+	* app/file/file-utils.c: added lots of const qualifiers.
+
 2004-10-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimppaintoptions-gui.c: the gradient button in blend
